--- a/New folder/package.json
+++ b/New folder/package.json
@@ -7,6 +7,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.24",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
+    "add": "^2.0.6",
     "antd": "^4.19.5",
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
@@ -15,6 +20,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
