--- a/New folder/package.json
+++ b/New folder/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
     "@types/react": "^18.0.5",
@@ -20,7 +19,6 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "react-testing-library": "^8.0.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.13.0"
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/user-event": "^14.1.1"
   }
 }
