--- a/New folder/package.json
+++ b/New folder/package.json
@@ -12,6 +12,7 @@
     "add": "^2.0.6",
     "antd": "^4.19.5",
     "dotenv": "^16.0.0",
+    "eslint-config-react-app": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
