--- a/New folder/package.json
+++ b/New folder/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "source-map-resolve": "^0.6.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
